<resources>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="enter_movie_name">Enter movie name</string>
    <string name="no_movie_found">No Movie found!</string>
    <string name="show_all_movies">Show All Movies</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="runtime">Runtime</string>
    <string name="rated">Rated</string>
    <string name="release">Release</string>
    <string name="genre">Genre</string>
    <string name="details">Details</string>
    <string name="information">Information</string>
</resources>